[package]
name = "dsc"
version = "0.4.1"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Lucas de Linhares <lucasdelinhares@gmail.com>"]
description = "CLI tool to convert between different formats."
homepage = "https://github.com/lucascompython/dsc"
repository = "https://github.com/lucascompython/dsc"
keywords = ["cli", "format", "convert", "convertor", "tool", "yaml", "json", "xml", "toml"]
categories = ["command-line-utilities", "command-line-interface"]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
quick-xml = {version = "0.28.2", features = ["serialize", "serde"] }
quickxml_to_serde = "0.5.0"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
toml = "0.7.3"


[profile.release]
lto = true
panic = "abort"
codegen-units = 1
strip = true

